<resources>
    <string name="app_name">Desi Tambola</string>
    <string name="speak_app_name">Welcome to Desi Tambola</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">TAMBOLA</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="profile_name">Rakesh Sharma</string>
    <string name="level">Level 1</string>
    <string name="app_desc">A sample app to test the in-app updates provided by the Play Core Library.</string>
    <string name="app_version_heading">Current App Version</string>
    <string name="check_for_update">Check For Update</string>
    <string name="update_available">Update available</string>
    <string name="update_not_available">No update available</string>
    <string name="restart_to_update">Update download. Tap to restart</string>
    <string name="action_restart">Restart</string>
    <string name="user_approval">User approved for the update app</string>
    <string name="user_cancel">User cancelled for update app</string>
    <string name="app_update_failed">App update failed</string>


    <string name="txt_loading">Loading...</string>
    <string name="cash_games">Cash Games</string>
    <string name="tournament_games">Tournament Games</string>
    <string name="add_cash">Add Cash</string>
    <string name="rs_100">100</string>
    <string name="rs_200">200</string>
    <string name="rs_400">400</string>
    <string name="rs_500">500</string>
    <string name="txt_amt">Enter Amount</string>
    <string name="txt_amt_hint">(₹25 to ₹25000)</string>
    <string name="txt_promo_code">Having A Promo Code?</string>
    <string name="txt_view_offers">View Offers</string>
    <string name="txt_prize_amt">₹500/-</string>
    <string name="txt_entry">Entry : </string>
    <string name="txt_entry_amt">₹5/-</string>
    <string name="txt_start">Starts : </string>
    <string name="txt_start_date_time">11:15 PM TODAY</string>
    <string name="txt_seats">Seats : </string>
    <string name="txt_seats_count">50/50</string>
    <string name="txt_remaining_time">Remaining Time : </string>
    <string name="txt_remain_time">11:15 PM</string>
    <string name="txt_join">JOIN</string>
    <string name="txt_wait_list">WAITLIST</string>
    <string name="txt_fast_filling">FAST FILLING</string>

    <string name="txt_name">Name</string>
    <string name="txt_fname">First Name</string>
    <string name="txt_lname">Last Name</string>
    <string name="txt_email">Email</string>
    <string name="txt_password">Password</string>
    <string name="txt_confirm_password">Confirm Password</string>
    <string name="txt_mobile">Mobile(Optional)</string>
    <string name="txt_terms_condition">By registering, you accept you are 18+ and agree to our T&amp;C and Privacy and Policy</string>
    <string name="txt_register_for_free"><u>REGISTER FOR FREE</u></string>

    <string name="txt_query">Enter your query</string>
    <string name="txt_bank_name">Bank name</string>
    <string name="txt_ac_holder_name">Account holder name</string>
    <string name="txt_ac_no">Account no</string>
    <string name="txt_confirm_ac_no">Confirm account no</string>
    <string name="txt_ifsc_code">IFSC Code</string>

    <string name="txt_ticket_1">Ticket\n1\nClaim</string>
    <string name="txt_ticket_hide_1">Ticket\n1\nHide</string>
    <string name="txt_ticket_2">Ticket\n2\nClaim</string>
    <string name="txt_ticket_hide_2">Ticket\n2\nHide</string>

    <string name="menu_setting">Settings</string>
    <string name="menu_sound">Sound</string>
    <string name="menu_contact_us">Contact Us</string>
    <string name="menu_logout">Logout</string>

    <string name="txt_result">Result</string>
    <string name="txt_play_again">Play Again</string>

    <!-- TODO: Paytm -->
    <!--    <string name="merchant_id">GblQDP68212852342989</string>-->
    <!--    <string name="merchant_key">#sFadf3f9Xz6k79R</string>-->
    <!--    <string name="website">WEBSTAGING</string>-->
    <!--    <string name="industry_type">Retail</string>-->
    <!--    <string name="channel_id">WAP</string>-->

    <!-- TODO: Facebook -->
    <string name="facebook_app_id">601291377241746</string>
    <string name="fb_login_protocol_scheme">fb601291377241746</string>


    <string name="order_id">Order Id : </string>
    <string name="customer_id">Customer Id : </string>
    <string name="transaction_amount">Transaction Amount : </string>
    <string name="channel_id">Channel Id : </string>
    <string name="industry_type_id">Industry Type Id : </string>
    <string name="website">Website : </string>
    <string name="theme">Theme : </string>
    <string name="cust_email_id">Email Id : </string>
    <string name="cust_mobile_no">Mobile Number : </string>
    <string name="merchant_id">Merchant Id : </string>
    <string name="checksum_generation_url">Checksum Generation URL : </string>
    <string name="checksum_verification_url">Checksum Verification URL : </string>
    <string name="start_transaction">Start Transaction</string>
    <string name="sample_order_id">ORDER</string>
    <string name="sample_customer_id">CUST23657</string>
    <string name="sample_transaction_amount">1</string>
    <string name="sample_channel_id">WAP</string>
    <string name="sample_industry_type_id">Retail</string>
    <string name="sample_website">worldpressplg</string>
    <string name="sample_theme">merchant</string>
    <string name="sample_cust_email_id">abc@gmail.com</string>
    <string name="sample_cust_mobile_no">123</string>
    <string name="sample_merchant_id_staging">WorldP64425807474247</string>
    <string name="sample_checksum_generation_url">https://pguat.paytm.com/merchant-chksum/ChecksumGenerator</string>
    <string name="sample_checksum_verification_url">https://pguat.paytm.com/merchant-chksum/ValidateChksum</string>

</resources>
