<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- add setting -->
    <item android:id="@+id/menu_setting"
        android:icon="@drawable/ic_action_setting"
        android:title="@string/menu_setting"
        app:showAsAction="ifRoom"/>
    <!-- add sound -->
    <item android:id="@+id/menu_sound"
        android:icon="@drawable/ic_action_sound"
        android:title="@string/menu_sound"
        app:showAsAction="ifRoom"/>
    <!-- add contact us -->
    <item android:id="@+id/menu_contact_us"
        android:icon="@drawable/ic_action_contact_us"
        android:title="@string/menu_contact_us"
        app:showAsAction="ifRoom"/>
    <!-- add logout -->
    <item android:id="@+id/menu_logout"
        android:icon="@drawable/ic_action_logout"
        android:title="@string/menu_logout"
        app:showAsAction="ifRoom"/>
</menu>