<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/round_corner"
    android:layout_margin="@dimen/dimen_4dp"
    android:gravity="center">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:id="@+id/text_tour_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="DTT-Cash-5"
            android:textSize="@dimen/dimen_16sp"
            android:textStyle="bold"
            android:padding="@dimen/dimen_4dp"
            android:textColor="@android:color/black"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/dimen_2dp"
            android:padding="@dimen/dimen_4dp"
            android:background="@color/black_overlay"
            android:gravity="center_horizontal">
            <ImageView
                android:layout_width="@dimen/dimen_48dp"
                android:layout_height="@dimen/dimen_48dp"
                android:src="@drawable/ic_trophy"/>
            <TextView
                android:id="@+id/text_tournament_prize_amt"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/txt_prize_amt"
                android:textSize="@dimen/dimen_24sp"
                android:textStyle="bold"
                android:padding="@dimen/dimen_8dp"
                android:textColor="@color/color_yellow"/>
        </LinearLayout>
        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:paddingStart="@dimen/dimen_32dp"
            android:paddingEnd="@dimen/dimen_32dp"
            android:orientation="vertical">
            <TableRow android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_entry"
                    android:textSize="@dimen/dimen_16sp"
                    android:textStyle="bold"
                    android:padding="@dimen/dimen_8dp"
                    android:layout_column="1"
                    android:textColor="@android:color/black"/>
                <TextView
                    android:id="@+id/text_entry_fee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_entry_amt"
                    android:textSize="@dimen/dimen_14sp"
                    android:textStyle="bold"
                    android:padding="@dimen/dimen_8dp"
                    android:layout_column="2"
                    android:textColor="@color/color_blue"/>
            </TableRow>
            <TableRow android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_start"
                    android:textSize="@dimen/dimen_14sp"
                    android:textStyle="bold"
                    android:padding="@dimen/dimen_8dp"
                    android:layout_column="1"
                    android:textColor="@android:color/black"/>
                <TextView
                    android:id="@+id/text_start_datetime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_start_date_time"
                    android:textSize="@dimen/dimen_14sp"
                    android:textStyle="bold"
                    android:padding="@dimen/dimen_8dp"
                    android:layout_column="2"
                    android:textColor="@color/color_blue"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_seats"
                    android:textSize="@dimen/dimen_14sp"
                    android:textStyle="bold"
                    android:visibility="gone"
                    android:padding="@dimen/dimen_8dp"
                    android:layout_column="1"
                    android:textColor="@android:color/black"/>
                <TextView
                    android:id="@+id/text_seats_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:text="@string/txt_seats_count"
                    android:textSize="@dimen/dimen_14sp"
                    android:textStyle="bold"
                    android:padding="@dimen/dimen_8dp"
                    android:layout_column="2"
                    android:textColor="@color/color_blue"/>
            </TableRow>
            <TableRow android:layout_width="match_parent"
                android:visibility="gone"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_remaining_time"
                    android:textSize="@dimen/dimen_14sp"
                    android:textStyle="bold"
                    android:padding="@dimen/dimen_8dp"
                    android:layout_column="1"
                    android:textColor="@android:color/black"/>
                <TextView
                    android:id="@+id/text_remaining_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_remain_time"
                    android:textSize="@dimen/dimen_14sp"
                    android:textStyle="bold"
                    android:padding="@dimen/dimen_8dp"
                    android:layout_column="2"
                    android:textColor="@color/color_blue"/>
            </TableRow>
        </TableLayout>
        <TextView
            android:id="@+id/text_join_or_status"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_32dp"
            android:layout_marginStart="@dimen/dimen_16dp"
            android:layout_marginEnd="@dimen/dimen_16dp"
            android:background="@drawable/ic_btn_bg"
            android:text="@string/txt_join"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="@dimen/dimen_14sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/black_overlay"
            android:layout_margin="@dimen/dimen_2dp"
            android:gravity="center">
            <TextView
                android:id="@+id/text_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_fast_filling"
                android:textColor="@color/color_white"
                android:padding="@dimen/dimen_2dp"
                android:gravity="center"
                android:textSize="@dimen/dimen_12sp"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linear_tournament_item"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <ImageView
            android:layout_width="@dimen/dimen_144dp"
            android:layout_height="@dimen/dimen_144dp"
            android:layout_margin="@dimen/dimen_8dp"
            android:src="@drawable/lock"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
