<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/splash_screen_1"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:background="@drawable/round_corner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:id="@+id/linear_top"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_centerHorizontal="true">
            <LinearLayout
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true">
                <TextView
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/add_cash"/>
            </LinearLayout>
            <View android:background="@android:color/white" android:layout_width="match_parent" android:layout_height="1dp" android:layout_marginStart="96dp" android:layout_marginEnd="96dp"/>
            <LinearLayout
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_centerHorizontal="true">
                <TextView
                    android:id="@+id/text_rs_100"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:gravity="center"
                    android:background="@drawable/ic_btn_bg"
                    android:layout_width="144dp"
                    android:layout_height="48dp"
                    android:layout_margin="8dp"
                    android:text="@string/rs_100"/>
                <TextView
                    android:id="@+id/text_rs_200"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:gravity="center"
                    android:background="@drawable/ic_btn_bg"
                    android:layout_width="144dp"
                    android:layout_height="48dp"
                    android:layout_margin="8dp"
                    android:text="@string/rs_200"/>
                <TextView
                    android:id="@+id/text_rs_500"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:gravity="center"
                    android:background="@drawable/ic_btn_bg"
                    android:layout_width="144dp"
                    android:layout_height="48dp"
                    android:layout_margin="8dp"
                    android:text="@string/rs_500"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_amount"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:hintEnabled="true"
                    app:hintTextColor="@android:color/white">
                    <com.google.android.material.textfield.TextInputEditText
                        android:textColorHint="@android:color/white"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/txt_amt"
                        android:maxLength="8"
                        android:drawableLeft="@drawable/ic_action_rupee"
                        android:inputType="numberDecimal"/>
                </com.google.android.material.textfield.TextInputLayout>
                <TextView
                    android:textSize="14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_amt_hint"
                    android:layout_marginStart="16dp"/>
                <LinearLayout
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/text_input_promo_code"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        app:hintEnabled="true"
                        app:hintTextColor="@android:color/white">
                        <com.google.android.material.textfield.TextInputEditText
                            android:textColorHint="@android:color/white"
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:hint="@string/txt_promo_code"
                            android:inputType="textCapCharacters"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <TextView
                        android:id="@+id/text_view_offers"
                        android:textSize="16sp"
                        android:textColor="#f44336"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_view_offers"
                        android:layout_marginStart="16dp"/>
                </LinearLayout>
                <LinearLayout
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/text_btn_add_cash"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@android:color/black"
                        android:gravity="center"
                        android:background="@drawable/ic_btn_bg"
                        android:layout_width="200dp"
                        android:layout_height="48dp"
                        android:layout_margin="8dp"
                        android:text="@string/add_cash"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
