<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_screen"
    tools:context=".ProfileActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="72dp"
        android:layout_marginEnd="72dp"
        android:paddingStart="96dp"
        android:paddingEnd="96dp"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/eclipse_shape"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="none">
            <!-- todo: register -->
            <LinearLayout
                android:id="@+id/linear_register"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible"
                android:orientation="vertical"
                android:gravity="center">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <View
                        android:layout_width="48dp"
                        android:layout_height="1dp"
                        android:background="@android:color/black"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:textSize="18sp"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textColor="@android:color/black"
                        android:text="UPDATE"/>
                    <View
                        android:layout_width="48dp"
                        android:layout_height="1dp"
                        android:background="@android:color/black"/>
                </LinearLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_fname"
                    android:layout_width="256dp"
                    android:layout_height="wrap_content"
                    app:startIconDrawable="@drawable/ic_action_account"
                    app:hintEnabled="true">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_fname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txt_fname"
                        android:maxLength="40"
                        android:drawablePadding="4dp"
                        android:inputType="text"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_lname"
                    android:layout_width="256dp"
                    android:layout_height="wrap_content"
                    app:startIconDrawable="@drawable/ic_action_account"
                    app:hintEnabled="true">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_lname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txt_lname"
                        android:maxLength="40"
                        android:drawablePadding="4dp"
                        android:inputType="text"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_email"
                    android:layout_width="256dp"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    app:startIconDrawable="@drawable/ic_action_email"
                    app:hintEnabled="true">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:hint="@string/txt_email"
                        android:maxLength="50"
                        android:drawablePadding="4dp"
                        android:inputType="textEmailAddress"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_mobile"
                    android:layout_width="256dp"
                    android:layout_height="wrap_content"
                    app:startIconDrawable="@drawable/ic_action_mobile"
                    app:hintEnabled="true">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_mobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txt_mobile"
                        android:maxLength="10"
                        android:drawablePadding="4dp"
                        android:inputType="number"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_password"
                    android:layout_width="256dp"
                    android:layout_height="wrap_content"
                    app:hintEnabled="true"
                    app:startIconDrawable="@drawable/ic_action_password"
                    app:passwordToggleEnabled="true">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txt_password"
                        android:maxLength="15"
                        android:drawablePadding="4dp"
                        android:inputType="textPassword"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_confirm_password"
                    android:layout_width="256dp"
                    android:layout_height="wrap_content"
                    app:hintEnabled="true"
                    app:startIconDrawable="@drawable/ic_action_password"
                    app:passwordToggleEnabled="true">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txt_confirm_password"
                        android:maxLength="15"
                        android:drawableLeft="@drawable/ic_action_password"
                        android:drawablePadding="4dp"
                        android:inputType="textPassword"/>
                </com.google.android.material.textfield.TextInputLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/image_profile"
                        android:layout_width="96dp"
                        android:layout_height="96dp"
                        android:src="@mipmap/ic_launcher"/>
                    <TextView
                        android:id="@+id/text_add_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:padding="2dp"
                        android:textSize="12sp"
                        android:gravity="center"
                        android:drawableLeft="@drawable/ic_action_add"
                        android:textColor="@android:color/black"
                        android:text="Add "/>
                </LinearLayout>
                <TextView
                    android:id="@+id/text_update"
                    android:layout_width="256dp"
                    android:layout_height="48dp"
                    android:layout_margin="2dp"
                    android:background="@drawable/ic_btn_bg"
                    android:padding="2dp"
                    android:textSize="14sp"
                    android:gravity="center"
                    android:textColor="@android:color/black"
                    android:text="UPDATE"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>